<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="data"
            type="com.example.calculationtest.MyScoreViewModel"></variable>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.calculationtest.LoseFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/lose_img_description"
            android:src="@drawable/lose"
            app:layout_constraintBottom_toTopOf="@+id/guideline20"
            app:layout_constraintEnd_toStartOf="@+id/guideline19"
            app:layout_constraintStart_toStartOf="@+id/guideline18"
            app:layout_constraintTop_toTopOf="@+id/guideline21" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.55" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/tip_lose"
            android:textSize="@android:dimen/app_icon_size"
            app:layout_constraintBottom_toTopOf="@+id/guideline23"
            app:layout_constraintEnd_toStartOf="@+id/guideline19"
            app:layout_constraintStart_toStartOf="@+id/guideline18"
            app:layout_constraintTop_toTopOf="@+id/guideline23" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@{@string/lose_score(data.currentScore)}"
            android:textSize="@android:dimen/app_icon_size"
            app:layout_constraintBottom_toTopOf="@+id/guideline22"
            app:layout_constraintEnd_toStartOf="@+id/guideline19"
            app:layout_constraintStart_toStartOf="@+id/guideline18"
            app:layout_constraintTop_toTopOf="@+id/guideline22"
            tools:text="@string/lose_score"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.85" />

        <Button
            android:id="@+id/button10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/index"
            app:layout_constraintBottom_toTopOf="@+id/guideline24"
            app:layout_constraintEnd_toStartOf="@+id/guideline19"
            app:layout_constraintStart_toStartOf="@+id/guideline18"
            app:layout_constraintTop_toTopOf="@+id/guideline24" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
